@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_072617_1 - Add a __main__.py, simple executable script, and "run" Makefile target.
+
 saw_052817_1 - Add a note to the README.
 
 saw_052017_2 - First commit for the new pyproject, fork of fauxpython for ag namespace.
